<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016 The yuhaiyang Android Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="complete">完成</string>
    <string name="link_complete" formatted="false">完成(%d/%d)</string>
    <string name="link_sheet">%d张</string>
    <string name="go_settings">好,去设置</string>
    <string name="re_obtain">重新获取</string>

    <string name="get_verify_code">获取验证码</string>
    <string name="second_timing">%ds</string>
    <string name="cancel_photo">已取消选择</string>
    <string name="select_photo_title">选择图片</string>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="date">日</string>
    <string name="hour">时</string>
    <string name="min">分</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="this_week">本周</string>
    <string name="this_month">这个月</string>
    <string name="spacer">·</string>
    <string name="loading">努力加载中&#8230;</string>
    <string name="nothing">暂时没有数据</string>

    <string name="please_select_image">请选择图片</string>
    <string name="net_poor_connections">网络连接失败，请确认可以连接服务</string>
    <string name="net_server_error">服务器连接超时，请检查网络后再试</string>

    <string name="load_data_failed">加载数据失败</string>
    <string name="load_data_failed_tip">请检查您的手机是否已经联网\n点击按钮尝试重新加载</string>
    <string name="reload_data">重新加载</string>

    <string name="all_photos">所有照片</string>
    <string name="already_select_max">您最多只能选择%d张图片</string>
    <string name="exception_intent_open">没有找到相关应用</string>
    <string name="permission_storage_select_photo">请提供内部存储权限，否则将无法选择图片</string>
    <string name="permission_denied_tip">一些权限被您拒绝，程序可能异常，请同意授权。</string>
    <string name="preview_image">预览</string>
    <string name="link_preview_image">预览(%d)</string>
    <string name="select_photo">选择</string>
    <string name="select_photo_preview_left_top" formatted="false">%d/%d</string>

    <string name="pull2refresh_header_normal">下拉刷新</string>
    <string name="pull2refresh_header_ready">松开刷新</string>
    <string name="pull2refresh_header_loading">正在努力刷新中&#8230;</string>
    <string name="pull2refresh_header_success">刷新成功</string>
    <string name="pull2refresh_header_fail">刷新失败</string>

    <string name="pull2refresh_footer_normal">上滑查看更多</string>
    <string name="pull2refresh_footer_ready">松开载入更多</string>
    <string name="pull2refresh_footer_loading">正在努力加载中&#8230;</string>
    <string name="pull2refresh_footer_success">载入成功</string>
    <string name="pull2refresh_footer_fail">加载失败，请重试</string>
    <string name="pull2refresh_footer_end">已经全部加载完毕</string>
    <string name="pull2refresh_footer_empty">已经全部加载完毕</string>
</resources>