<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016 The yuhaiyang Android Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/corner_5dp_normal"
    android:orientation="horizontal">

    <com.ishow.common.widget.pickview.PickerView
        android:id="@+id/yearPicker"
        style="@style/CommonPickerView.DateTimePicker"
        android:layout_weight="1.6"
        app:unit="@string/year" />

    <com.ishow.common.widget.pickview.PickerView
        android:id="@+id/monthPicker"
        style="@style/CommonPickerView.DateTimePicker"
        app:unit="@string/month" />

    <com.ishow.common.widget.pickview.PickerView
        android:id="@+id/dayPicker"
        style="@style/CommonPickerView.DateTimePicker"
        app:unit="@string/date" />

    <com.ishow.common.widget.pickview.PickerView
        android:id="@+id/hourPicker"
        style="@style/CommonPickerView.DateTimePicker"
        app:unit="@string/hour" />

    <com.ishow.common.widget.pickview.PickerView
        android:id="@+id/minPicker"
        style="@style/CommonPickerView.DateTimePicker"
        app:unit="@string/min" />
</LinearLayout>
