<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 The yuhaiyang Android Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginBottom="@dimen/gap_grade_3"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@drawable/icon_no_server"/>

    <com.ishow.common.widget.spinkit.SpinKitView
        android:id="@+id/status_loading"
        style="@style/SpinKitView.Wave"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginBottom="@dimen/gap_grade_3"
        android:contentDescription="@null"
        app:spinKitColor="@color/color_accent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:includeFontPadding="false"
        android:lines="1"
        android:text="@string/load_data_failed"
        android:textColor="@color/text_grey_normal"
        android:textSize="@dimen/H_title"/>

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/gap_grade_4"
        android:paddingTop="@dimen/gap_grade_1"
        android:text="@string/load_data_failed_tip"
        android:textColor="@color/text_grey_light_more_normal"
        android:textSize="@dimen/J_title"/>

    <TextView
        android:id="@+id/reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_max_grey_line_bg"
        android:clickable="true"
        android:gravity="center"
        android:lines="1"
        android:minWidth="@dimen/dp_100"
        android:padding="@dimen/gap_grade_2"
        android:text="@string/reload_data"
        android:textColor="@color/text_grey_normal"
        android:textSize="@dimen/H_title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>
</LinearLayout>